# example-cpp-project

./: .gitignore  CMakeLists.txt  README.md
src/: helpers.cpp  helpers.h  helpersTests.cpp  main.cpp
